IMPORTANT-pod-with-custom-param.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-sleeper-pod
  labels:
    name: ubuntu-sleeper
spec:
  containers:
  - name: ubuntu-sleeper
    image: ubuntu-sleeper
    command: ["sleep2.0"] #this is equivalent to --entrypoint instruction in docker run --name ubuntu-sleeper --entrypoint sleep2.0 ubuntu-sleeper 10
    args: ["10"] # same as running docker run --name ubuntu-sleeper ubuntu-sleeper 10
