inject-secrets-to-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simpla-webapp-color
  labels:
    name: simpla-webapp-color
spec:
  containers:
  - name: simpla-webapp-color
    image: simpla-webapp-color
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 8080
    # inject secrets as env vars (whole file)
    volumes:
      - name: app-secret-volue
        secret:
          secretName: my-secret
