multi-container-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-webapp
  labels:
    name: simple-webapp
spec:
  containers:
  # container 1
  - name: simple-webapp
    image: simple-webapp
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 8080
  # container 2
  - name: log-agent
    image: log-agent
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
