my-custom-scheduler.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-custom-scheduler
  namespace: kube-system
spec:
  containers:
    - command:
      - kube-scheduler
      - --address=127.0.0.1
      - --kubeconfig=/etc/kubernetes/scheduler.conf
      - --leader-elect=true #used when you have multiple master nodes
      - --scheduler-name=my-custom-scheduler
      - --lock-object-name=my-custom-scheduler # used to differentiate new scheduler from default during leader election process
      image: k8s.gcr.io/kube-scheduler-amd64:v1.11.3
      name: kube-scheduler
