nginx-ingress-controller.yaml
apiVersion: extensions/v1beta1 # double check this
kind: Deployment
metadata:
  name: nginx-ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nginx-ingress
  template:
    metadata:
      labels:
        name: nginx-ingress
    spec:
      containers:
      # this is a special build of nginx specifically to be used as an ingress controller in k8s
        - name: nginx-ingress-controller
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.21.0
          # within the image, nginx is stored at a location /nginx-ingress-controller
          # so you have to pass that as the command to start it
          args:
            - /nginx-ingress-controller
            - --configmap=$(POD_NAMESPACE)/nginx-configuration
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
