private-repository-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - name: nginx
    image: private-repository.io/apps/internal-app
  imagePullSecrets:
    - name: registry-cred
