ingress-resource-1.yaml
apiVersion: extensions/v1beta1 # confirm this
kind: Ingress
metadata:
  name: ingress-wear
spec:
  backend:
    serviceName: wear-service
    servicePort: 80
